<resources>
    <string name="app_name">TrailX</string>
    <string name="username_tb">Enter Username here</string>
    <string name="password_tb">Enter Password here</string>
    <string name="fullname_tb">Enter Full Name here</string>
    <string name="age_tb">Enter Age here</string>
    <string name="email_tb">Enter Email here</string>
    <string name="height_tb">Enter Height here</string>
    <string name="weight_tb">Enter Weight here</string>
    <string name="forgot_password_tb">Forgot Password</string>
    <string name="Register_view">Registration</string>
    <string name="fullname_view">Full Name: </string>
    <string name="timer_view">Press Play!</string>
    <string name="age_view">Age: </string>
    <string name="gender_view">Gender: </string>
    <string name="male_radio_bt">Male</string>
    <string name="female_radio_bt">Female</string>
    <string name="other_radio_bt">Other</string>
    <string name="email_view">Email: </string>
    <string name="height_view">Height (in Centimetres): </string>
    <string name="weight_view">Weight (in Kilograms): </string>
    <string name="username_view">Username: </string>
    <string name="password_view">Password: </string>
    <string name="conf_password_view">Confirm Password: </string>
    <string name="trails_completed_stats">Trails Completed: </string>
    <string name="total_distance_stats">Total Distance: </string>
    <string name="total_calories_stats">Total Calories: </string>
    <string name="badges_earned_stats">Badges Earned: </string>
    <string name="access_token">pk.eyJ1IjoiYXNoc29uZ2giLCJhIjoiY2ttZDQxbDgyMGM4ZjJwbXdwYXpsdTNxbSJ9.xJ9i_G0J9J1f4_NCRlESKA</string>
    <string name="dist_view">Enter Distance: </string>
    <string name="location_view">Enter Location: </string>
    <string name="name_of_trail_view">Trail Name: </string>
    <string name="type_of_trail_view">Trail Type: </string>
    <string name="user_location_permission_explanation">This app requires you to give access to your current location to start trails.</string>
    <string name="user_location_permission_not_granted">Permission not granted!</string>
    <string name="cal_view">Calorie Count</string>
    <string name="steps_view">Steps</string>
</resources>