<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrailByDistanceScreen">

    <LinearLayout
        android:id="@+id/trails_by_dist_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_to_home_bt_trails_by_dist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/trails_by_distance_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/enter_dist_view_trails_by_dist"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/antic_slab"
                android:text="@string/dist_view"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="#20710B"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/trail_by_dist_value_trails_by_dist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="Autofill,LabelFor" />

            <Button
                android:id="@+id/dist_search_bt_trails_by_dist"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="488dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_trail_by_distance_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic_slab"
                android:text="@string/name_of_trail_view"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="#20710B"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textIsSelectable="false"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_trail_by_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/antic_slab"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/distance_trail_by_distance_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic_slab"
                android:text="@string/total_distance_stats"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="#20710B"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textIsSelectable="false"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trail_distance_trail_by_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/antic_slab"
                android:textSize="30sp" />

            <Button
                android:id="@+id/start_trail_trails_by_dist"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:background="#00BCD4"
                android:text="Start Trail"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/options_bar_trails_by_dist"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#000000"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settings_bt_trails_by_dist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/settings_bt_bar"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/discover_new_trails_bt_trails_by_dist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/discover_new_trails_bt_bar"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/active_trail_bt_trails_by_dist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/active_trail_bt_bar"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/my_trails_bt_trails_by_dist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/my_trails_bt_bar"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/music_bt_trails_by_dist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/music_bt_bar"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>